src/test/ui/parser/diff-markers/trait-item.stderr
error: encountered diff marker
  --> $DIR/trait-item.rs:2:1
   |
LL | <<<<<<< HEAD
   | ^^^^^^^ start
LL |     fn foo() {}
LL | =======
   | ^^^^^^^ middle
LL |     fn bar() {}
LL | >>>>>>> branch
   | ^^^^^^^ end

error: aborting due to previous error

